add question and correct screens

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salsa Quiz App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="grid"></div>
-    <img
-      style="grid-area: photo"
-      src="https://placeholder.com/"
-      alt="salsa-image-1"
-    />
-    <h1 style="grid-area: header">Salsa Quiz</h1>
-    <img src="https://placeholder.com/" alt="salsa-image-2" />
-    <button style="grid-area: button">Start Quiz</button>
+    <div class="start-grid">
+      <div style="grid-area: photo" class="start-photo">
+        <img src="https://via.placeholder.com/150" alt="salsa-image-2" />
+      </div>
+      <div style="grid-area: header">
+        <h1>Salsa Dance Quiz</h1>
+        <button>Start Quiz</button>
+      </div>
+      <div style="grid-area: photo2" class="start-photo">
+        <img src="https://via.placeholder.com/150" alt="salsa-image-1" />
+      </div>
+    </div>
   </body>
 </html>
