complete the correct and incorrect screens

--- a/incorrect_screen.html
+++ b/incorrect_screen.html
@@ -10,7 +10,7 @@
     <div class="main-screens">
       <div style="grid-area: header">
         <p>Question 2 of 5</p>
-        <p>2 correct, 0 incorrect</p>
+        <p>1 correct, 1 incorrect</p>
         <h1>The most traditional salsa dance style is?</h1>
         <form action="">
           <input type="radio" id="la" name="dance-type" value="L.A" />
@@ -22,7 +22,8 @@
           <input type="radio" id="pr" name="dance-type" value="PuertoRican" />
           <label for="pr">Puerto Rican</label>
         </form>
-        <div class="feedback"><span class="correct">Correct</span></div>
+        <div class="feedback"><span class="incorrect">Incorrect</span></div>
+        <div class="feedback">Correct answer is Cuban</div>
         <button>Next</button>
       </div>
     </div>
