--- a/question.html
+++ b/question.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="start-grid">
+    <div class="main-screens">
       <div style="grid-area: header">
-        <p>Question 1 of 5</p>
-        <p>current score: 5pts</p>
+        <p>Question 2 of 5</p>
+        <p>1 correct, 0 incorrect</p>
         <h1>The most traditional salsa dance style is?</h1>
         <form action="">
-          <input type="radio" id="male" name="gender" value="male" />
-          <label for="male">Male</label><br />
-          <input type="radio" id="female" name="gender" value="female" />
-          <label for="female">Female</label><br />
-          <input type="radio" id="other" name="gender" value="other" />
-          <label for="other">Other</label>
+          <input type="radio" id="la" name="dance-type" value="L.A" />
+          <label for="la">L.A.</label><br />
+          <input type="radio" id="cali" name="dance-type" value="Cali" />
+          <label for="cali">Cali</label><br />
+          <input type="radio" id="cuban" name="dance-type" value="Cuban" />
+          <label for="cuban">Cuban</label><br />
+          <input type="radio" id="pr" name="dance-type" value="PuertoRican" />
+          <label for="pr">Puerto Rican</label>
         </form>
         <button>Submit answer</button>
       </div>
