--- a/end_screen.html
+++ b/end_screen.html
@@ -13,7 +13,7 @@
       </div>
       <div style="grid-area: header">
         <h1>Salsa Dance Quiz</h1>
-        <button>Start Quiz</button>
+        <button>Start a new Quiz</button>
       </div>
       <div style="grid-area: photo2" class="start-photo">
         <img src="https://via.placeholder.com/150" alt="salsa-image-1" />
