--- a/end_screen.html
+++ b/end_screen.html
@@ -12,7 +12,10 @@
         <img src="https://via.placeholder.com/150" alt="salsa-image-2" />
       </div>
       <div style="grid-area: header">
-        <h1>Salsa Dance Quiz</h1>
+        <h2>Salsa Dance Quiz</h2>
+        <p>4 of 5 correct</p>
+        <p>80%</p>
+        <p>Thanks for playing</p>
         <button>Start a new Quiz</button>
       </div>
       <div style="grid-area: photo2" class="start-photo">
