add links to all screens

--- a/correct_screen.html
+++ b/correct_screen.html
@@ -26,5 +26,15 @@
         <button>Next</button>
       </div>
     </div>
+    <br />
+    <br />
+    <br />
+    <p>Click to go to other wireframes</p>
+    <ul>
+      <li><a href="incorrect_screen.html">Question incorrect wireframe</a></li>
+      <li><a href="end_screen.html">Summary page wireframe</a></li>
+      <li><a href="index.html">Initial screen wireframe</a></li>
+      <li><a href="question.html">Question wireframe</a></li>
+    </ul>
   </body>
 </html>
