--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
         <img src="https://via.placeholder.com/150" alt="salsa-image-1" />
       </div>
     </div>
+    <br />
+    <br />
+    <br />
+    <p>Click to go to other wireframes</p>
+    <ul>
+      <li><a href="question.html">Question wireframe</a></li>
+      <li><a href="correct_screen.html">Question correct wireframe</a></li>
+      <li><a href="incorrect_screen.html">Question incorrect wireframe</a></li>
+      <li><a href="end_screen.html">Summary page wireframe</a></li>
+    </ul>
   </body>
 </html>
