--- a/question.html
+++ b/question.html
@@ -25,5 +25,15 @@
         <button>Submit answer</button>
       </div>
     </div>
+    <br />
+    <br />
+    <br />
+    <p>Click to go to other wireframes</p>
+    <ul>
+      <li><a href="correct_screen.html">Question correct wireframe</a></li>
+      <li><a href="incorrect_screen.html">Question incorrect wireframe</a></li>
+      <li><a href="end_screen.html">Summary page wireframe</a></li>
+      <li><a href="index.html">initial screen wireframe</a></li>
+    </ul>
   </body>
 </html>
