--- a/incorrect_screen.html
+++ b/incorrect_screen.html
@@ -27,5 +27,15 @@
         <button>Next</button>
       </div>
     </div>
+    <br />
+    <br />
+    <br />
+    <p>Click to go to other wireframes</p>
+    <ul>
+      <li><a href="end_screen.html">Summary page wireframe</a></li>
+      <li><a href="index.html">initial screen wireframe</a></li>
+      <li><a href="question.html">Question wireframe</a></li>
+      <li><a href="correct_screen.html">Question correct wireframe</a></li>
+    </ul>
   </body>
 </html>
