add basic js bring together the beginning and end screens

--- a/end_screen.html
+++ b/end_screen.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="main-screens">
+    <div class="start-end-screens">
       <div style="grid-area: photo" class="start-photo">
         <img src="https://via.placeholder.com/150" alt="salsa-image-2" />
       </div>
-      <div style="grid-area: header">
+      <div class="start-end-info" style="grid-area: header">
         <h2>Salsa Dance Quiz</h2>
         <p>4 of 5 correct</p>
         <p>80%</p>
