--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="main-screens">
+    <div class="start-end-screens">
       <div style="grid-area: photo" class="start-photo">
         <img src="https://via.placeholder.com/150" alt="salsa-image-2" />
       </div>
-      <div style="grid-area: header">
+      <div class="start-end-info" style="grid-area: header">
         <h1>Salsa Dance Quiz</h1>
-        <button>Start Quiz</button>
+        <button id="start-quiz">Start Quiz</button>
+        <button id="new-quiz">Start a new Quiz</button>
       </div>
       <div style="grid-area: photo2" class="start-photo">
         <img src="https://via.placeholder.com/150" alt="salsa-image-1" />
