--- a/index.html
+++ b/index.html
@@ -7,17 +7,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="start-end-screens">
-      <div style="grid-area: photo" class="start-photo">
+    <div class="start-end-screen">
+      <div style="grid-area: photo" class="photo">
         <img src="https://via.placeholder.com/150" alt="salsa-image-2" />
       </div>
       <div class="start-end-info" style="grid-area: header">
-        <h1>Salsa Dance Quiz</h1>
         <button id="start-quiz">Start Quiz</button>
         <button id="new-quiz">Start a new Quiz</button>
       </div>
-      <div style="grid-area: photo2" class="start-photo">
+      <div style="grid-area: photo2" class="photo">
         <img src="https://via.placeholder.com/150" alt="salsa-image-1" />
+      </div>
+    </div>
+    <div class="question-screen">
+      <div style="grid-area: header">
+        <p>Question 2 of 5</p>
+        <p>1 correct, 0 incorrect</p>
+        <h1>The most traditional salsa dance style is?</h1>
+        <form action="">
+          <input type="radio" id="la" name="dance-type" value="L.A" />
+          <label for="la">L.A.</label><br />
+          <input type="radio" id="cali" name="dance-type" value="Cali" />
+          <label for="cali">Cali</label><br />
+          <input type="radio" id="cuban" name="dance-type" value="Cuban" />
+          <label for="cuban">Cuban</label><br />
+          <input type="radio" id="pr" name="dance-type" value="PuertoRican" />
+          <label for="pr">Puerto Rican</label>
+        </form>
+        <div class="feedback"></div>
+        <div class="correct-answer">Correct answer is Cuban</div>
+        <button class="submit-answer">Submit answer</button>
+        <button class="next">Next</button>
       </div>
     </div>
   </body>
