--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       <div style="grid-area: photo" class="photo">
         <img src="https://via.placeholder.com/150" alt="salsa-image-2" />
       </div>
-      <div class="start-end-info" style="grid-area: header">
+      <div style="grid-area: header">
+        <div class="start-end-info"></div>
         <button id="start-quiz">Start Quiz</button>
-        <button id="new-quiz">Start a new Quiz</button>
+        <button id="start-new-quiz">Start a new Quiz</button>
       </div>
       <div style="grid-area: photo2" class="photo">
         <img src="https://via.placeholder.com/150" alt="salsa-image-1" />
@@ -21,24 +22,14 @@
     </div>
     <div class="question-screen">
       <div style="grid-area: header">
-        <p>Question 2 of 5</p>
-        <p>1 correct, 0 incorrect</p>
-        <h1>The most traditional salsa dance style is?</h1>
-        <form action="">
-          <input type="radio" id="la" name="dance-type" value="L.A" />
-          <label for="la">L.A.</label><br />
-          <input type="radio" id="cali" name="dance-type" value="Cali" />
-          <label for="cali">Cali</label><br />
-          <input type="radio" id="cuban" name="dance-type" value="Cuban" />
-          <label for="cuban">Cuban</label><br />
-          <input type="radio" id="pr" name="dance-type" value="PuertoRican" />
-          <label for="pr">Puerto Rican</label>
-        </form>
+        <div class="question-info"></div>
         <div class="feedback"></div>
-        <div class="correct-answer">Correct answer is Cuban</div>
-        <button class="submit-answer">Submit answer</button>
-        <button class="next">Next</button>
+        <div class="correct-answer"></div>
+        <button id="submit-answer">Submit answer</button>
+        <button id="next">Next</button>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
